--- a/第二周上机/第二周上机.md
+++ b/第二周上机/第二周上机.md
@@ -1,4 +1,4 @@
-### zy01
+## zy01
 
 > 调试并理解线性表链式存储的实现，如单链表结构定义、初始化、插入元素、删除元素、遍历显示、释放空间等。
 
@@ -26,3 +26,20 @@
 
 > 用链式存储实现求两集合的交集，不使用自定义函数。
 
+
+
+## zy06
+
+> 用循环链表存储实现猴子选大王游戏，理解循环链表的初始化、判空、添加元素、遍历显示、计数删除、空间释放等。比如20个猴，数到7出圈，或100个猴子数到15出圈
+
+
+
+## zy07
+
+> 调试并理解线性表双向链表存储的实现，如双向链表结构定义、初始化、插入元素、删除元素、遍历显示（正序/逆序）、释放空间等。
+
+
+
+## zy08
+
+> 用链式存储实现一元多项式方程的相加。此题要用到前面的单链表相关函数和数据结构定义。
